<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewCommentActivity" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
	        android:id="@+id/lardTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Reply"
		    android:textColor="#FFFFFF" />
        
	    <TextView
	        android:id="@+id/usernameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username_text_view"
		    android:textColor="#FFFFFF" />
	
	    <EditText
	        android:id="@+id/usernameEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="14"
	        android:gravity="center_vertical|left"
	        android:hint="@string/username_edittext_view"
	        android:textColor="#FFFFFF" >
	        
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/commentTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/comment_text_view"
		    android:textColor="#FFFFFF" />
	
	    <EditText
	        android:id="@+id/commentEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="14"
	        android:gravity="center_vertical|left"
	        android:hint="@string/fake_hint"
	        android:inputType="textMultiLine"
	        android:textColor="#FFFFFF" >
	        
	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/current_pic_title_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/cur_pic_title"
		    android:textColor="@android:color/holo_blue_light"/>
	    
	    <ImageView
	        android:id="@+id/currentPicture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:src="@android:drawable/ic_menu_camera" />
	    
        <TextView
            android:id="@+id/currentLatLocation"
            android:layout_width="fill_parent"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/currentLongLocation"
            android:layout_width="fill_parent"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content" />
	    
	</LinearLayout>
	
    <LinearLayout 
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
 
	    <Button
	        android:id="@+id/attachButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onClickAttachButton"
	        android:text="@string/attach_button"
	        android:textColor="#FFFFFF" />
	
	    <Button
	        android:id="@+id/locationButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onClickLocationButton"
	        android:text="@string/location_button"
	        android:textColor="#FFFFFF"/>
	    
	    <Button
	        android:id="@+id/sendButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onClickSendButton"
	        android:text="@string/save_button"
	        android:textColor="#FFFFFF" />
        
    </LinearLayout>

</RelativeLayout>